app/styles/main.scss
/* ... */
	.wall-thumbnail {
		&:hover {
			border: 1px solid $search-twitter-blue;
		}
		display: inline-block;
		margin-right: 20px;
		margin-bottom: 30px;
		width: 250px;
		height: 250px;
		position: relative;
		background-color:white;
		border: 1px solid $search-grey-border;
		.sq-setter-w{
			width: 100%;
		    height: auto;
		    visibility: hidden;
		}
		.wall-thumbnail-close {
			position: absolute;
			top:0;
			right: 0;
			margin-top:12px;
			margin-right: 10px;
			z-index: 1;
			color: white;
			text-decoration: none;
    		cursor: pointer;
    		opacity: 0.5;
    		padding: 10px;
    		border: 1px solid transparent;
    		border-radius: 50%;
    		&:hover {
				font-weight: bold;
				cursor: pointer;
			}
		}
		.wall-thumbnail-content {
			position: absolute;
			text-decoration: none;
		    top: 0;
		    right: 0;
		    bottom: 0;
		    left: 0;
	    	text-align: center;
		    .wall-thumbnail-event-name {
		    	height: 25%;
		    	
		    	padding-top: 10%;
		    	margin-bottom: 10%;

		    }
		    .wall-thumbnail-mainhashtag{
		    	text-align: center;
		    	padding-top: 15%;
		    	padding-bottom: 15%;
		    }
		    .wall-thumbnail-footer{
		    	color: black;
		    	text-align: center;
		    	padding-top: 10%;
		    	width: 250px;
		    	margin-left: 0px;
		    	border-top: 1px solid $search-grey-border;
		    	div {
		    		border-left: 1px solid $search-grey-border;
		    		text-align: center;
		    		span {
			    		&:hover {
							text-decoration: underline;
							cursor: pointer;
							color: $search-light-black;
						}
		    			i {
		    				margin-right: 5px;
		    			}
		    		}
		    	}
			}
		}
		
	}
a.external-hashtag:hover {
	text-decoration: underline;	
}

a.external-mention:hover {
	text-decoration: underline;
}

a.external_link:hover {
	text-decoration: underline;
}

output {
	text-align: left;
	margin-bottom: 10px;
}

output > span > img {
	width:50px;
	height:50px;
}

